# dmba

./: .gitignore  .testmondata  CHANGELOG.md  LICENSE  Makefile  README.md  REVIEWERS  conda.md  pyproject.toml  requirements.txt  setup.py  tox.ini
.circleci/: config.yml
.github/workflows/: build.yaml  build.yml  codeql-analysis.yaml  codeql-analysis.yml  dmba-tests-versions.yml  dmba-tests.yml
data/: NYPD_motor_vehicle_collisions_1000.csv  accidents.csv  accidents_full.csv  accidents_nn.csv  airfares.csv  amtrak.csv  appliance_shipments.csv  australian_wines.csv  bankruptcy.csv  banks.csv  baregg_tunnel.csv  bath_soap_household.csv  bicup2006.csv  boston_housing.csv  canadian_work_hours.csv  catalog_cross_sell.csv  cereals.csv  charles_book_club.csv  cosmetics.csv  course_rating.csv  course_topics.csv  department_store_sales.csv  drug.csv  east_west_airlines_cluster.csv  east_west_airlines_nn.csv  ebay_auctions.csv  ebay_network.csv  ebay_treemap.csv  faceplate.csv  flight_delays.csv  fundraising.csv  future_fundraising.csv  gdp.csv  german_credit.csv  hair_care_product.csv  laptop_sales_january2008.csv  lift_example.csv  natural_gas_sales.csv  owner_example.csv  pharmaceuticals.csv  (+21 more)
dmba/: .gitignore  __init__.py  data.py  feature_selection.py  graphs.py  metric.py  text_mining.py
doc/: Build package.txt  Installing Python.docx
docker/: Dockerfile.base  Dockerfile.devtools  Dockerfile.dmba  Dockerfile.jupyter  Dockerfile.pylint
notebooks/: Example plotDecisionTree.ipynb  example_plot_decision_tree.ipynb
src/: .testmondata  pylintrc
src/dmba/: __init__.py  data.py  featureSelection.py  graphs.py  metric.py  textMining.py  version.py
src/dmba/tests/: test_data.py  test_featureSelection.py  test_graphs.py  test_metric.py  test_textMining.py
tests/: test_data.py  test_feature_selection.py  test_graphs.py  test_metric.py  test_text_mining.py
