[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dmba"
description = "Utility functions for 'Data Mining for Business Analytics: Concepts, Techniques, and Applications in Python'"
readme = "README.md"
authors = [
    { name = "Peter Gedeck", email = "mail@petergedeck.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.11"
dependencies = [
    "graphviz",
    "matplotlib",
    "numpy",
    "pandas",
    "polars",
    "scikit-learn",
    "scipy",
]
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "flake8",
    "isort",
    "mypy",
    "pytest",
    "ruff",
]

[project.urls]
Repository = "https://github.com/polars-stats/dmba"

[tool.setuptools.dynamic]
version = { attr = "dmba.__init__.__version__" }

[tool.setuptools.packages.find]
include = ["dmba"]

[tool.setuptools.package-data]
dmba = ["data/*.csv.gz", "data/*.zip"]

[tool.pytest.ini_options]
minversion = "7.3"
addopts = "-rP"
testpaths = [
    "tests"
]

[tool.mypy]
warn_return_any = false
warn_unused_configs = true
cache_dir = "/tmp"
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = true

[tool.isort]
line_length = 120
multi_line_output = 0

[tool.ruff]
ignore = ["ISC003", "PT011", "A003", "B010", "EM101", "EM102", "Q000", "SLF001", "PGH003", "PD901", "TRY002", "TRY003",
          "PLR2004", "UP007", "B905", "PLR0913", "PLR0912"]
extend-select = [
    "A", "ARG",
    "B",
    "C4", "COM",
    "DJ", "DTZ",
    "EM", "EXE",
    "FBT",
    "G",
    "ICN", "INP", "ISC",
    "NPY",
    "PD", "PGH", "PIE", "PLC", "PLE", "PLR", "PLW", "PT", "PTH", "PYI",
    "Q",
    "RUF", "RSE",
    "S", "SIM", "SLF",
    "TCH", "TID", "TRY",
    "UP",
    "W",
    # "ERA",
  ]
line-length = 120
cache-dir = "/tmp"
exclude = [
    "migrations",
    "D_*.py",
    "__init__.py",
  ]
target-version = "py311"

[tool.ruff.per-file-ignores]
"*/collaborative_model/**/*.py" = ["PLR0912", "PLR0915", "PLW2901"]
"*/tests/*.py" = ["S1", "FBT", "PLR"]
